<resources>
    <string name="app_name">Ghana Water Bill Pay </string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="share_app_text">Don’t get bored with writing lesson plans anymore! Get your lessons for every week right now!</string>
    <string name="playstore_link_app">https://play.google.com/store/apps/details?id=com.gh.sammie.lessonplan</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="note">• We do not claim ownership of any GES materials \n • Do not forget to check freebies for free contents.
        \n \n• Please do not cancel payment until you receive transaction notice or success message in the app.
         \n \n•Click on App Guide to watch videos on how to use the app.</string>
    <string name="click_to_refresh_or_swipe_down">click To Refresh or swipe down</string>
    <string name="share">Share</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="click_on_step_two_which_will_avail_two_options_to_you_n_1_download_2_read">click on step two which will avail two options to you   1. Download 2. Read</string>
    <string name="alert">** • NOTE in case of no pending approvals shown in your MOMO wallet, please try checking for approvals again after at least 25 seconds. \n \n After confirming payment in your approvals please do not close the app kindly go back to the Payment page in the app to verify your payment status and access to your paid content. •\n \n please do not close or cancel payment after approving payment in wallet, wait to get verified. \n \n • Contact admin in case of any issue  </string>
    <string name="nb_option_7_is_now_option_6_in_mtn_momo_n_in_case_of_no_approvals_shown_in_your_momo_wallet_please_try_checking_for_approvals_again_after_at_least_25_seconds_n_please_do_not_close_the_app_kindly_go_back_to_the_payment_page_in_the_app_to_verify_your_payment_status">•Option 7 is now option 6 in MoMO \n \n• In case of no pending approvals is shown in your MOMO wallet, please wait and try checking for approvals again after at least 25 seconds.• please do not close the app kindly go back to the Payment page in the app to verify your payment status</string>
    <string name="free">Free</string>
    <string name="please_your_download_folder_is_empty_download_to_view_files_here_n_nb_files_with_password_can_only_be_viewed_with_the_app">Please your download folder is empty download to view files here   NB Files with password can only be viewed with the app</string>

    <string name="potrait_mode">portrait mode</string>
    <string name="free_version">Free version</string>
    <string name="my_lesson_play_app">menu</string>
    <string name="slide_from_your_right_to_see_all_lesson_notes_for_basic_schools">Lesson notes for Basic Schools\n(kg1-B6)</string>
    <string name="learning_materials">Extra/Others</string>
    <string name="extra"><![CDATA[Extra & Others]]></string>
    <string name="home">Home DashBoard</string>
    <string name="forgot_password_click_here">Forgot Password ? Click Here !</string>
    <string name="sign_in_with_google">Login With Google</string>
    <string name="contact_0544184738_if_u_are_experiencing_any_login_problem">Click <u>Here if u are experiencing </u>login problem</string>
    <string name="or">OR</string>
    <string name="sign_in">Login</string>
    <string name="forget_password">Forget password ?</string>
    <string name="want_to_recover_or_change_your_password">Enter your email to recover or change your password ?</string>
    <string name="reset_password">Click Here to reset password</string>
    <string name="junior_high">Junior High SCHOOL NOTES</string>
    <string name="downloaded_file">Download Files</string>
    <string name="basic_schools">Basic Schools</string>
    <string name="request">Enquiries</string>
    <string name="channel">com.gh.sammie.lessonplan.SAMMIE</string>
    <string name="home_dashboard">Home DashBoard</string>
    <string name="description">Description:</string>
    <string name="notification">Alerts</string>
    <string name="clear_notifications">clear notifications</string>
    <string name="view_all">View all</string>
    <string name="asol_tsol"><![CDATA[ASOL & TSOL]]></string>
    <string name="click_here_for_your_asol_tsol"><![CDATA[Click here for your ASOL & TSOL]]></string>
    <string name="landscape_mode">landscape mode</string>
    <string name="night_mode">Night mode</string>
    <string name="day_mode">Day Mode</string>
    <string name="print">Print Document</string>
    <string name="your_email">\t\t\tyour email</string>
    <string name="back_to_main_menu">Back To main menu</string>
    <string name="momoOnceDialogMessage">Please return to the payment page after confirming the transaction by dialing *389*89# and wait until you see a success message. Please also ensure that you have enough balance in your wallet before performing transactions. </string>
    <string name="deny_revoke">deny 3.8</string>
    <string name="never_get_bored_writing_notes_ever">Never get bored writing notes ever !</string>

</resources>