<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_orient"
        android:icon="@drawable/ic_stay_current_portrait_black_24dp"
        android:title="@string/potrait_mode"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_landscape"
        android:icon="@drawable/ic_crop_landscape_black_24dp"
        android:title="@string/landscape_mode"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_dark_mode"
        android:icon="@drawable/ic_moon_black_24dp"
        android:title="@string/night_mode"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_day_mode"
        android:icon="@drawable/ic_wb_sunny_white_24dp"
        android:title="@string/day_mode"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_print"
        android:icon="@drawable/ic_print_black_24dp"
        android:title="@string/print"
        android:visible="false"
        app:showAsAction="ifRoom" />
</menu>